style.css
/*
  1. Use a more-intuitive box-sizing model.
*/
*,
*::before,
*::after {
    box-sizing: border-box;
}

/*
    2. Remove default margin
  */
* {
    margin: 0;
}

/*
    3. Allow percentage-based heights in the application
  */
html,
body {
    height: 100%;
}

/*
    Typographic tweaks!
    4. Add accessible line-height
    5. Improve text rendering
  */
body {
    line-height: 1.5;
    -webkit-font-smoothing: antialiased;
}

/*
    6. Improve media defaults
  */
img,
picture,
video,
canvas,
svg {
    display: block;
    max-width: 100%;
}

/*
    7. Remove built-in form typography styles
  */
input,
button,
textarea,
select {
    font: inherit;
}

/*
    8. Avoid text overflows
  */
p,
h1,
h2,
h3,
h4,
h5,
h6 {
    overflow-wrap: break-word;
}

html {
    font-size: 62.5%;
}


body {
    display: grid;
    place-content: center;
    min-height: 100vh;
    font-size: 15px;

}


.card-grid {
    display: grid;
    grid-template-rows: 44rem 44rem 44rem;
    width: 87%;
}

.grid-row-1 {
    background: #E28625;

}

.grid-row-2 {
    background: #006971;
}

.grid-row-3 {
    background: #004140;
}

img,
h1,
p,
button {
    margin-left: 4.9rem;
}

img {
    margin-top: 4.8rem;
}

p,
button {
    margin-top: 2.5rem;
    max-width: 32ch;
    font-family: 'Lexend Deca';
    font-style: normal;
    font-weight: 400;
    font-size: 15px;
    line-height: 25px;
}

button {
    border-radius: 3em;
    width: 14.6rem;
    height: 4.8rem;
    border: none;
    outline: 2px solid white;
}

p{
    color: white;
    opacity: 0.75;
}

button:hover {
    color: white;
    cursor: pointer;
}

h1 {
    text-transform: uppercase;
    font-family: 'Big Shoulders Display';
    font-style: normal;
    font-weight: 700;
    font-size: 40px;
    line-height: 48px;
    margin-top: 3.5rem;
    color: white;
}

.sedans-btn {
    color: #E28625;
}

.sedans-btn:hover {
    background-color: #E28625;
}

.suv-btn {
    color: #006971;
}

.suv-btn:hover {
    background-color: #006971;
}

.luxury-btn {
    color: #004140;
}

.luxury-btn:hover {
    background-color: #004140;
}

@media only screen and (min-width: 600px) {
    body {
        place-content: center;
    }

    .card-grid {
        grid-template-rows: 50rem;
        grid-template-columns: 31rem 31rem 31rem;
        place-content: center;
    }
    p{
        max-width: 24ch;
    }
}

